# MIZANOS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  STRUCTURE.md  package-lock.json  package.json  pyproject.toml
.claude/: README.md
.claude/agents/: port-lovable.md
.claude/plans/: silly-humming-bonbon.md
apps/api/: auth.py  config.py  dependencies.py  main.py  worker_main.py
apps/api/jobs/: __init__.py  context.py  scan_job.py  tasks.py  worker.py
apps/api/middleware/: logging.py  security_headers.py
apps/api/models/: __init__.py  ai.py  api_key.py  audit.py  checklist_template.py  deployment.py  document.py  enums.py  evaluation.py  github_pat.py  job.py  knowledge.py  qa.py  (+14 more)
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
datapop/: Evaluations.xlsx  Neutron GTM Main Tracker.xlsx
docs/: BUG_TRACKING_PLAN.md  CODEBASE_ANALYSIS.md  INTAKE_SPEC_ANALYSIS.md  MARKETING_TASKS_PLAN.md  MULTI_STACK_EXTRACTOR_PLAN.md  PORTING_GUIDE.md  PORTING_GUIDE_VS_AGENT_COMPARISON.md  PORT_LOVABLE_DIAGRAM.md  PROJECT_OVERVIEW.md  REMOVE_USER_ID_PLAN.md  REPO_SCAN_FLOW.md  REPO_SCAN_PROGRESS_TRACKING_PLAN_2026-02-27.md  ROLES_AND_PERMISSIONS.md  ROLE_SYSTEM_AUDIT.md  SEED_PERMISSIONS_PLAN.md  WORKER_ARCHITECTURE_PLAN.md
infra/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  alembic.ini  docker-compose.yml  start-api.sh  start-worker.sh
infra/alembic/: env.py
scripts/: extract-lovable-manifest.sh  grant_admin_role.py  scaffold-domain.sh  seed_admin.py  verify-port.sh
(+763 files in other folders)
